* Updated the [[Wiki::Help::Index]] page.
* Updated the [[Wiki::History]] page.
* Updated the [[WoaS::CSS::Boot]] page.
* Updated the [[WoaS::CSS::Core]] page.
======================================================================================================================
* Changed the class of editor buttons to wiki_editor_button.
* Changed the class of help code to wiki_help_code.
* Fixed two links on the [[Wiki::Help::Spoilers]] page.
* Updated the [[WoaS::CSS::Core]] page.
======================================================================================================================
* Removed the [[Wiki::Help::JavaScript]] page.
* Renamed the [[Help::JavaScript]] page to [[Wiki::Help::JavaScript]].
* Updated the [[Wiki::Help::Index]] page.
* Updated the [[Wiki::Help::JavaScript]] page.
======================================================================================================================
* Added the [[Wiki::Example::Javascript 2]] page.
* Added the [[Wiki::Example::Javascript 3]] page.
* Added the [[Wiki::Example::Javascript 4]] page.
* Renamed the [[Example::JavaScript]] page to [[Wiki::Example::JavaScript 1]].
* Updated the [[Wiki::Example::JavaScript 1]] page.
* Updated the [[Wiki::Help::JavaScript]] page.
======================================================================================================================
* Changed the class of the footer to wiki_footer.
* Updated the [[WoaS::CSS::Core]] page.
* Updated the [[WoaS::CSS::Custom]] page.
* Updated the [[Wiki::History]] page.
======================================================================================================================
* Removed the [[WoaS::Template::Example::Transclusion]] page.
* Updated the content of the footer.
* Updated the [[Wiki::History]] page.
* Updated the [[WoaS::CSS::Boot]] page.
======================================================================================================================