@@ -51,7 +51,7 @@ var pages = [
 
 /* ]]> */ </script>
 <title woas_permanent="1">Main Page</title>
-<style type="text/css" woas_permanent="1" woas_core_style="1">/* CSS used when loading/saving WoaS - readonly */
+<style type="text/css" woas_permanent="1" woas_core_style="1">/* CSS USED WHEN LOADING/SAVING THE WIKI*/
 body {
 	font-family: Georgia, verdana;
 	}
